<resources>
    <string name="app_name">chapter03</string>
    <string name="hello_andriod">hello andriod</string>
    <string name="hello">你好！</string>
    <string name="text_color">颜色</string>
    <string name="able">启用测试按钮</string>
    <string name="disable">禁用测试按钮</string>
    <string name="test">测试按钮</string>
    <string name="simple_calculator">简单计算器</string>
    <string name="cancel">CE</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="clear">C</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">＋</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="minus">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="reciprocal">1/x</string>

    <string name="weather_str">晴天</string>
</resources>