<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EEEEEE"
        android:padding="5dp"
        tools:context=".CalculatorActivity">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
        >
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                        android:text="@string/simple_calculator"
                      android:gravity="center"
                      android:textColor="@color/black"
                      android:textSize="20dp"
            />
            <TextView
                      android:id="@+id/tv_result"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@color/white"
                      android:text="0"
                      android:textColor="@color/black"
                      android:textSize="25dp"
                      android:lines="3"
                      android:gravity="bottom|right"/>
            <GridLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="4"
                        android:rowCount="5"
            >
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_divide"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/divide"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_multiply"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/multiply"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_clear"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_seven"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/seven"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_eight"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/eight"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_nine"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/nine"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_plus"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_four"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/four"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_five"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/five"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_six"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/six"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_minus"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_one"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_two"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/two"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_three"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/three"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <ImageButton
                        android:id="@+id/btn_sqrt"
                        android:src="@drawable/sqrt"
                        android:scaleType="fitCenter"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/btn_font_height_size"
                        android:layout_columnWeight="1"
                />
                <Button
                    android:id="@+id/btn_reciprocal"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/reciprocal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_zero"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_dot"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/dot"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
                <Button
                    android:id="@+id/btn_equal"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_font_size"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>