<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".button.ButtonEnableActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    >

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/able"
                android:id="@+id/btn_able"
        />
        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/disable"
                android:id="@+id/btn_disable"
        />
    </LinearLayout>
    <Button android:layout_width="match_parent"
            android:text="@string/test"
            android:layout_height="wrap_content"
            android:id="@+id/btn_test"
            android:textColor="#888888"
            android:enabled="false"
    />
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="查看按钮点击的结果"
              android:layout_gravity="center"
              android:id="@+id/tv_result"
    />
</LinearLayout>